feat: Port the OS BulkIndexResponse to Java Client
This will port the bulk operation indexing from using the RHLC to
using the OS Java Client. This will now maintain a list of BulkAction
operations, which are requests ready to be made, rather than an
intermediary state that requires serialising again.

(cherry picked from commit 551c82a3f9db5ac60d34eb0243e34879c82f68e6)